--- a/pom.xml
+++ b/pom.xml
@@ -21,16 +21,22 @@
 		<maven.compiler.target>1.6</maven.compiler.target>
 	</properties>
 	<build>
-		<resources>
-			<resource>
-				<targetPath>META-INF</targetPath>
-				<directory>.</directory>
-				<includes>
-					<include>LICENSE</include>
-					<include>NOTICE</include>
-				</includes>
-			</resource>
-		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.1.2</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
 	</build>
 	<dependencies>
 		<dependency>
