--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>r10-SNAPSHOT</version>
+			<version>10.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
